--- a/xds.css
+++ b/xds.css
@@ -27,13 +27,10 @@ html, body {
 /* Tags */
 #xds h1 {
   font-family: "Sofia Pro", Futura, sans-serif;
-  font-size: 38px;
-  line-height: 38px;
+  font-size: 36px;
+  line-height: 36px;
   font-weight: 500;
-  background: #01A9ED;
-  color: white;
-  padding: 60px 0;
-  border-radius: 4px;
+  text-align: center;
 }
 #xds h2 {
   font-family: 'Sofia Pro', Futura, sans-serif;
