--- a/xds.css
+++ b/xds.css
@@ -19,13 +19,16 @@ html, body {
   height: 100vh;
 } 
 #xds,
-#xds * {
+#xds *,
+#xds :after,
+#xds :before {
   margin: 0;
   padding: 0;
   font-family: "Avenir Next", Arial, Helvetica, sans-serif;
   color: var(--black);
   background-color: transparent;
   font-size: 16px;  
+  font-weight: normal;  
   line-height: 18px;  
   box-sizing: border-box;
   border: none;
@@ -60,7 +63,7 @@ html, body {
 }
 #xds h4 {
   font-family: "Sofia Pro", Futura, sans-serif;
-  font-size: 16px;
+  font-size: 17px;
   line-height: 17px;
   font-weight: 500;
 }
@@ -83,9 +86,6 @@ html, body {
 }
 #xds strong {
   font-weight: 600;
-}
-#xds label {
-  cursor: pointer;
 }
 @media (max-width:415px){
   #xds h2 {
@@ -430,18 +430,18 @@ html, body {
   content: '';
   border: 1.5px solid var(--grey65);
   display: block;
-  height: 17px;
-  width: 17px;
-  border-radius: 2px;
+  height: 21px;
+  width: 21px;
+  border-radius: 3px;
 }
 /* checked */
 #xds .input-checkbox input[type="checkbox"]:checked + label::after  {
   position: absolute;
-  top: 1px;
-  left: -26px;
+  top: 1.5px;
+  left: -27px;
   content: '';
-  width: 8px;
-  height: 5px;
+  width: 14px;
+  height: 8px;
   border: 3px solid white;
   border-top: none;
   border-right: none;
@@ -452,8 +452,8 @@ html, body {
   top: -3px;
   left: -30px;
   content: '';
-  width: 17px;
-  height: 17px;  
+  width: 21px;
+  height: 21px;  
   background: var(--cyan);
   border: 1.5px solid var(--cyan);
   border-radius: 3px;
