--- a/xds.css
+++ b/xds.css
@@ -226,9 +226,9 @@ html, body {
   padding: 10px 20px;
 }
 #xds .button.small {
-  padding: 0;
-  border-radius: 0;
   cursor: pointer;
+}
+#xds .button.small div {
   font-weight: 600;
   text-transform: uppercase;
 }
